haml in background working

--- a/sticky_notes.safariextension/shared/templates/sticky_pad.html.haml
+++ b/sticky_notes.safariextension/shared/templates/sticky_pad.html.haml
@@ -1,3 +1,8 @@
 %h1
-  This is the sticky note pad
-  = name
+  Sticky Notepad
+
+#sticky_pad_navbar
+  %a{ href: '#', id: 'sticky_pad_close'}
+    X
+
+
