--- a/sticky_notes.safariextension/shared/templates/sticky_pad.html.haml
+++ b/sticky_notes.safariextension/shared/templates/sticky_pad.html.haml
@@ -1,8 +1,12 @@
 %h1
   Sticky Notepad
-
 #sticky_pad_navbar
-  %a{ href: '#', id: 'sticky_pad_close'}
-    X
+  %a{ href: 'javascript:void(0)', id: 'sticky_pad_close'}
+    Close (X)
+%br
+%hr
+
+%textarea{id: 'sticky_pad_textarea'}
+  = content
 
 
